Fixed phone no. on mobile not rendering correctly

--- a/styles/fonts.css
+++ b/styles/fonts.css
@@ -35,15 +35,6 @@ p {
   padding-bottom: 20px;
 }
 
-a {
-  text-decoration: none;
-  font-family: 'TTNooksBold', 'Times New Roman', serif;
-  font-weight: bold;
-  font-size: 1.3rem;
-  text-transform: uppercase;
-  color: var(--white);
-}
-
 h2 {
   color: var(--white);
 }
