--- a/styles/layout.css
+++ b/styles/layout.css
@@ -157,7 +157,16 @@ header {
     background-color: var(--color-primary);
 }
 
-.active {
+.navlink {
+    text-decoration: none;
+    font-family: 'TTNooksBold', 'Times New Roman', serif;
+    font-weight: bold;
+    font-size: 1.3rem;
+    text-transform: uppercase;
+    color: var(--white);
+  }
+
+.navlink--active {
     color: var(--color-secondary);
 }
 
